--- a/roles/system/tasks/02_install_system_cfg.yml
+++ b/roles/system/tasks/02_install_system_cfg.yml
@@ -1,4 +1,18 @@
 ---
 
+# Disable selinux temporarily
+- name: "Disable selinux temporarily"
+  shell: "setenforce 0 || /bin/true"
+  args:
+    warn: false
+  failed_when: false
+
+# Disable Firewall
+- name: "<RedHat> Disable firewall"
+  systemd: name=firewalld state=stopped enabled=no
+  when: ansible_os_family == 'RedHat' and ansible_service_mgr == "systemd" and disable_firewall
+  failed_when: false
+
+# Update user open file limits
 - name: Update Open file limits
   copy: src={{ cfg_system_open_file_limits_path }} dest=/etc/security/limits.conf
