[vars] update group variables about dingodb

--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -7,14 +7,14 @@ installer_cache_path: /tmp
 #-----------------------------------------------------
 # 1. Update System Configuration about OS
 #-----------------------------------------------------
-install_system: false
+install_system: true
 install_system_basicTools: true
 install_system_fileLimits: true
 
 #-----------------------------------------------------
 # 2. Install Java SDK
 #-----------------------------------------------------
-install_java_sdk: false
+install_java_sdk: true
 jdk_install_path: /opt
 
 #-----------------------------------------------------
