[dingo] update dingo start script

--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -16,8 +16,12 @@ install_system_fileLimits: true
 #-----------------------------------------------------
 install_java_sdk: true
 jdk_install_path: /opt
+jdk_home: "{{ jdk_install_path }}/jdk"
 
 #-----------------------------------------------------
 # 3. Install Dingo to Dingo home
 #-----------------------------------------------------
 install_dingo: true
+install_dingo_basic_command: true
+install_dingo_update_configuration: true
+install_dingo_start_roles: true
