--- a/roles/dingo/tasks/main.yml
+++ b/roles/dingo/tasks/main.yml
@@ -13,6 +13,9 @@
 - import_tasks: "{{ playbook_dir }}/roles/dingo/tasks/02_update_configuration.yml"
   when: install_dingo_update_configuration
 
+- import_tasks: 03_start_roles_command.yml
+  when: install_dingo_start_roles
+
 #- import_tasks: "{{ playbook_dir }}/../roles/jmx/tasks/main.yml"
 #  vars:
 #    svc_name: "{{ dingo_service_name }}"
