--- a/roles/jdk/tasks/03_config.yml
+++ b/roles/jdk/tasks/03_config.yml
@@ -18,3 +18,6 @@
   - "JAVA_HOME={{ jdk_home }}"
   - "PATH=${JAVA_HOME}/bin:$PATH"
   - "export JAVA_HOME PATH"
+
+- name: "Source Java Profile"
+  shell: "source /root/.bash_profile"
