--- a/roles/dingo/tasks/02_update_configuration.yml
+++ b/roles/dingo/tasks/02_update_configuration.yml
@@ -10,7 +10,7 @@
     - "Executor Exchange Connection: {{ dingo_executor_exchange_list }}"
 
 - name: "Generate dingo configuration files"
-  template: src={{ item.src }} dest={{ item.dest }} owner={{ dingo_user }} group={{ dingo_group }} mode=0644
+  template: src={{ item.src }} dest={{ item.dest }} owner={{ dingo_user }} group={{ dingo_group }} mode=0755
   with_items:
     - {
       src: "logback-coordinator.xml.j2",
@@ -25,10 +25,6 @@
       dest: "{{ dingo_home }}/conf/logback-sqlline.xml"
     }
     - {
-      src: "config.yaml.j2",
-      dest: "{{ dingo_home}}/conf/config.yaml"
-    }
-    - {
       src: "start-coordinator.sh.j2",
       dest: "{{ dingo_home }}/bin/start-coordinator.sh"
     }
@@ -36,8 +32,25 @@
       src: "start-executor.sh.j2",
       dest: "{{ dingo_home }}/bin/start-executor.sh"
     }
+    - {
+      src: "stop-all-component.sh.j2",
+      dest: "{{ dingo_home }}/bin/stop-all-component.sh"
+    }
+    - {
+      src: "coordinator.yaml.j2",
+      dest: "{{ dingo_home }}/conf/coordinator.yaml"
+    }
+    - {
+      src: "executor.yaml.j2",
+      dest: "{{ dingo_home }}/conf/executor.yaml"
+    }
+    - {
+      src: "client.yaml.j2",
+      dest: "{{ dingo_home }}/conf/client.yaml"
+    }
 
 - name: "Remove unused configure files"
   file: path="{{ item }}" state=absent
   with_items:
     - "{{ dingo_home }}/conf/logback.xml"
+    - "{{ dingo_home }}/conf/config.yaml"
