[dingo] update templates about configuration of dingo

--- a/roles/dingo/tasks/02_update_configuration.yml
+++ b/roles/dingo/tasks/02_update_configuration.yml
@@ -33,6 +33,10 @@
       dest: "{{ dingo_home }}/bin/start-executor.sh"
     }
     - {
+      src: "start-driver.sh.j2",
+      dest: "{{ dingo_home }}/bin/start-driver.sh"
+    }
+    - {
       src: "stop-all-component.sh.j2",
       dest: "{{ dingo_home }}/bin/stop-all-component.sh"
     }
