--- a/container/docker-compose/docker-compose.local.yml
+++ b/container/docker-compose/docker-compose.local.yml
@@ -2,7 +2,7 @@
 version: '2.2'
 services:
   coordinator1:
-    image: dingodb.ubuntu:v0.2.0
+    image: dingodb.ubuntu:v0.3.0
     hostname: coordinator1
     container_name: coordinator1
     networks:
@@ -12,7 +12,7 @@ services:
       DINGO_HOSTNAME: coordinator1
 
   coordinator2:
-    image: dingodb.ubuntu:v0.2.0
+    image: dingodb.ubuntu:v0.3.0
     hostname: coordinator2
     container_name: coordinator2
     networks:
@@ -22,7 +22,7 @@ services:
       DINGO_HOSTNAME: coordinator2
 
   coordinator3:
-    image: dingodb.ubuntu:v0.2.0
+    image: dingodb.ubuntu:v0.3.0
     hostname: coordinator3
     container_name: coordinator3
     networks:
@@ -32,9 +32,11 @@ services:
       DINGO_HOSTNAME: coordinator3
 
   executor1:
-    image: dingodb.ubuntu:v0.2.0
+    image: dingodb.ubuntu:v0.3.0
     hostname: executor1
     container_name: executor1
+    ports:
+      - 8765:8765
     networks:
       - dingo_net
     depends_on:
@@ -46,9 +48,11 @@ services:
        DINGO_HOSTNAME: executor1
 
   executor2:
-    image: dingodb.ubuntu:v0.2.0
+    image: dingodb.ubuntu:v0.3.0
     hostname: executor2
     container_name: executor2
+    ports:
+      - 8765:8765
     networks:
       - dingo_net
     depends_on:
@@ -60,9 +64,11 @@ services:
        DINGO_HOSTNAME: executor2
 
   executor3:
-    image: dingodb.ubuntu:v0.2.0
+    image: dingodb.ubuntu:v0.3.0
     hostname: executor3
     container_name: executor3
+    ports:
+      - 8765:8765
     networks:
       - dingo_net
     depends_on:
