--- a/container/images/Dockerfile
+++ b/container/images/Dockerfile
@@ -1,13 +1,20 @@
 FROM ubuntu:18.04
 
-ENV DEBIAN_FRONTEND=noninteractive
+ENV TZ=Asia/Shanghai \
+    DEBIAN_FRONTEND=noninteractive
 SHELL ["/bin/bash", "-c"]
 
-RUN apt-get update && apt-get install -y openjdk-8-jdk vim unzip netcat net-tools && unset http_proxy https_proxy HTTP_PROXY HTTPS_PROXY
+RUN apt-get update  \
+    && apt-get install -y openjdk-8-jdk vim unzip netcat net-tools tzdata \
+    && unset http_proxy https_proxy HTTP_PROXY HTTPS_PROXY \
+    && ln -fs /usr/share/zoneinfo/${TZ} /etc/localtime \
+    && echo ${TZ} > /etc/timezone \
+    && dpkg-reconfigure --frontend noninteractive tzdata \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY ./dingo.zip /opt
 
-RUN unzip /opt/dingo.zip -d /opt/dingo && mkdir /opt/dingo/log && mkdir /opt/dingo/meta && mkdir /opt/dingo/raft && mkdir /opt/dingo/db && chmod +x /opt/dingo/bin/*
+RUN unzip /opt/dingo.zip -d /opt/dingo && mkdir /opt/dingo/log && mkdir /opt/dingo/coordinator && mkdir -p /opt/dingo/executor/meta && mkdir /opt/dingo/executor/raftDb && mkdir /opt/dingo/executor/raftLog && chmod +x /opt/dingo/bin/*
 
 ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
 
