[dingo-deploy] update start script about dingo

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -24,7 +24,7 @@ retry_files_enabled = False
 #strategy_plugins   = /usr/share/ansible/plugins/strategy
 
 action_plugins     = ./action_plugins
-#filter_plugins     = ./filter_plugins
+filter_plugins     = ./filter_plugins
 
 log_path = ./ansible.log
 
