--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: "Check prometheus should install or Not"
+  meta: end_play
+  when: install_prometheus == false
+
+- name: "Load artifacts info"
+  action: resolve_artifacts
 
 - name: Gather facts from extra hosts (regardless of limit or tags)
   setup:
@@ -7,9 +13,4 @@
   when: hostvars[item]['ansible_default_ipv4'] is not defined
   with_items: "{{ groups['all'] }}"
 
-- import_tasks: 01_blackbox_exporter.yml
-
-- import_tasks: 02_pushgateway.yml
-
 - import_tasks: 03_prometheus_server.yml
-
