--- a/artifacts/config.yml
+++ b/artifacts/config.yml
@@ -5,3 +5,5 @@ artifacts:
   - { name: "cfg_jdk_local_path",  path_in_repo: "jdk-8u171-linux-x64.tar.gz" }
   - { name: "cfg_system_open_file_limits_path",  path_in_repo: "system/centos8/limits/limits.conf" }
   - { name: "cfg_dingodb_local_path", path_in_repo: "dingo.zip"}
+  - { name: "prometheus_local_file", path_in_repo: "prometheus-2.14.0.linux-amd64.tar.gz" }
+  - { name: "grafana_local_file", path_in_repo: "grafana-7.3.1.linux-amd64.tar.gz"}
