--- a/roles/prometheus/tasks/03_prometheus_server.yml
+++ b/roles/prometheus/tasks/03_prometheus_server.yml
@@ -51,18 +51,10 @@
     - {
       src: "prometheus.yml.j2",
       dest: "{{ prometheus_home }}/prometheus.yml"
-    }
+    } 
     - {
-      src: "node.yml.j2",
-      dest: "{{ prometheus_home }}/node.yml"
-    }
-    - {
-      src: "datahub.yml.j2",
-      dest: "{{ prometheus_home }}/datahub.yml"
-    }
-    - {
-      src: "blackbox.yml.j2",
-      dest: "{{ prometheus_home }}/blackbox.yml"
+      src: "jmx.json.j2",
+      dest: "{{ prometheus_home }}/jmx.json"
     }
 
 - name: "Generate Systemd service File"
