--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -30,7 +30,7 @@ jdk_home: "{{ jdk_install_path }}/jdk"
 #-----------------------------------------------------
 # 3. Install Dingo to Dingo home
 #-----------------------------------------------------
-install_dingo: true
+install_dingo: false
 install_dingo_basic_command: true
 install_dingo_update_configuration: true
 install_dingo_start_roles: true
@@ -43,7 +43,7 @@ blackbox_exporter_port: 19115
 blackbox_exporter_server: "{{ prometheus_server }}"
 
 # Node Exporter
-install_node_exporter: true
+install_node_exporter: false
 node_exporter_port: 19100
 node_exporter_servers: "{{ groups['node_exporter'] }}"
 
@@ -65,3 +65,16 @@ install_grafana: true
 grafana_port: 3000
 grafana_server: "{{ groups['grafana'][0] }}"
 default_dashboard_uid: "RNezu0fWk"
+
+dingo_tmp_coordinator_list: "{{ groups['coordinator'] }}"
+dingo_tmp_executor_list: "{{ groups['executor'] }}"
+
+# define dingo coordinator http monitor port: 172.20.3.18:8080,172.20.3.19:8080,172.20.3.20:8080
+dingo_coordinator_http_monitor_port: 9201
+dingo_executor_http_monitor_port: 9202
+
+dingo_coordinator_http_tmp_list: "{% for item in dingo_tmp_coordinator_list %} {{item}}:{{ dingo_coordinator_http_monitor_port }} {% endfor %}"
+dingo_coordinator_http_monitor_list: "{{ dingo_coordinator_http_tmp_list.split() | join(\",\") }}"
+
+dingo_executor_http_tmp_list: "{% for item in dingo_tmp_executor_list %} {{item}}:{{ dingo_executor_http_monitor_port }} {% endfor %}"
+dingo_executor_http_monitor_list: "{{ dingo_executor_http_tmp_list.split() | join(\",\") }}"
