--- a/group_vars/all/_shared.yml
+++ b/group_vars/all/_shared.yml
@@ -73,8 +73,9 @@ dingo_tmp_executor_list: "{{ groups['executor'] }}"
 dingo_coordinator_http_monitor_port: 9201
 dingo_executor_http_monitor_port: 9202
 
-dingo_coordinator_http_tmp_list: "{% for item in dingo_tmp_coordinator_list %} {{item}}:{{ dingo_coordinator_http_monitor_port }} {% endfor %}"
-dingo_coordinator_http_monitor_list: "{{ dingo_coordinator_http_tmp_list.split() | join(\",\") }}"
+# ['172.20.31.10:9201','172.20.31.11:9201','172.20.31.12:9201']
+dingo_coordinator_http_tmp_list: "{% for item in dingo_tmp_coordinator_list %} '{{item}}:{{ dingo_coordinator_http_monitor_port }}' {% endfor %}"
+dingo_coordinator_http_monitor_list: "[ {{ dingo_coordinator_http_tmp_list.split() | join(\",\") }} ]"
 
-dingo_executor_http_tmp_list: "{% for item in dingo_tmp_executor_list %} {{item}}:{{ dingo_executor_http_monitor_port }} {% endfor %}"
-dingo_executor_http_monitor_list: "{{ dingo_executor_http_tmp_list.split() | join(\",\") }}"
+dingo_executor_http_tmp_list: "{% for item in dingo_tmp_executor_list %} '{{item}}:{{ dingo_executor_http_monitor_port }}' {% endfor %}"
+dingo_executor_http_monitor_list: "[ {{ dingo_executor_http_tmp_list.split() | join(\",\") }} ]"
